# RoastEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  comp_rshader.sh
SourceFiles/: Utilities.h  main.cpp  utils.h  vkRenderer.cpp  vkRenderer.h
SourceFiles/re_renderer/: RERenderer.h  RERenderer.mm
SourceFiles/re_renderer/mtl/: mtlRenderer.h  mtlRenderer.mm
SourceFiles/re_renderer/ogl/: oglRenderer.h
SourceFiles/re_renderer/vk/: main.cpp  vkRenderer.h
SourceFiles/vk_renderer/: vkRenderer.cpp  vkRenderer.h
scripts/: version.sh
src/: RDDefs.h  RMath.h  RoastDisplay.h  RoastDisplay.mm  main.cpp  settings.toml
src/_roast/: BaseRend.cpp  BaseRend.h  RDDefs.h  RDGui.h  RoastDisplay.h  RoastDisplay.mm
src/common/: RDDebug.h  SGlfw.h
src/engine/: RInit.h
src/mtl/: ImGuiMetal.h  ImGuiMetal.mm  MtlRender.h  MtlRender.mm  mtlRenderer.h  mtlRenderer.mm
src/ogl/: LoadShaders.cpp  LoadShaders.h  OglRender.cpp  OglRender.h  oglRenderer.cpp  triangles.frag  triangles.vert  vgl.h
src/ogl/shaders/: triangles.frag
src/shaders/: VkShader.frag  VkShader.vert
src/vk/: VkMesh.cpp  VkMesh.h  VkRender.cpp  VkRender.h  comp_rshader.sh  utils.h  vkRenderer.cpp  vkRenderer.h
src/vk/shaders/: VkShader.frag  VkShader.vert
